--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,6 @@ services:
       - /app/node_modules
       - ./ui:/app
     env_file:
-      - /app/.env
+      - ./ui/.env
     ports:
       - "5000:80"
