--- a/backend/.env
+++ b/backend/.env
@@ -19,6 +19,6 @@ MIN_ZOOM=4
 CODE_CRS_DISPLAY=4756
 UNIT_CRS_DISPLAY=degrees
 CODE_CRS_DB=4756
-WMS_URL=http://gis.homtech.vn:8080/geoserver/VietNam/wms
+WMS_URL=/geoserver/VietNam/wms
 WMS_LAYER=VietNam:VietNam_level_0
 WMS_FORMAT=image/png
