--- a/backend/docker-compose.backend.yml
+++ b/backend/docker-compose.backend.yml
@@ -19,7 +19,7 @@ services:
   geoserver:
     image: kartoza/geoserver:latest
     volumes:
-      - /home/tulv/NC:/home/product/
+      - /home/tulv:/home/product/
       - /mnt/e/NC/Data:/home/development
       - geoserver_data:/opt/geoserver/data_dir
     ports:
