--- a/backend/docker-compose.backend.yml
+++ b/backend/docker-compose.backend.yml
@@ -7,8 +7,8 @@ services:
     image: mdillon/postgis:latest
     volumes:
       - db_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    # ports:
+    #   - "8001:5432"
     env_file:
       - .env
     restart: on-failure
@@ -23,7 +23,7 @@ services:
       - /mnt/e/NC/Data:/home/development
       - geoserver_data:/opt/geoserver/data_dir
     ports:
-      - "8080:8080"
+      - "8002:8080"
     restart: on-failure
     env_file:
       - .env
@@ -32,7 +32,7 @@ services:
     healthcheck:
       test: curl --fail -s "http://localhost:8080/" || exit 1
       interval: 2m
-      timeout: 1m
+      timeout: 30s
       retries: 5
       
   # CONTAINER WEB DJANGO
