--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,49 +1,115 @@
-venv
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-myauth/__pycache__
-backend/__pycache__
-biengioidiagioi/__pycache__
-cosododac/__pycache__
-dancu/__pycache__
-diahinh/__pycache__
-giaothong/__pycache__
-nendialy/__pycache__
-phubemat/__pycache__
-thuyvan/__pycache__
-soanthaokehoach/__pycache__
-multimedia/__pycache__
+# C extensions
+*.so
 
-media/files/*
-media/images/*
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-nendialy/choices/__pycache__
-nendialy/utils/__pycache__
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-myauth/migrations/*
-biengioidiagioi/migrations/*
-cosododac/migrations/*
-dancu/migrations/*
-diahinh/migrations/*
-giaothong/migrations/*
-nendialy/migrations/*
-phubemat/migrations/*
-thuyvan/migrations/*
-soanthaokehoach/migrations/*
-multimedia/migrations/*
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-!myauth/migrations/__init__.py
-!biengioidiagioi/migrations/__init__.py
-!cosododac/migrations/__init__.py
-!dancu/migrations/__init__.py
-!diahinh/migrations/__init__.py
-!giaothong/migrations/__init__.py
-!nendialy/migrations/__init__.py
-!phubemat/migrations/__init__.py
-!thuyvan/migrations/__init__.py
-!soanthaokehoach/migrations/__init__.py
-!multimedia/migrations/__init__.py
-!media/files/__init__.py
-!media/images/__init__.py
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
 
-# DISABLE JAZZMIN
-# templates/admin
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# dotenv
+.env
+
+# virtualenv
+.venv
+venv/
+ENV/
+.vscode
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+
+.DS_Store
+*.sqlite3
+media/
+*.pyc
+*.db
+*.pid
+
+# Ignore Django Migrations in Development if you are working on team
+
+# Only for Development only
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
