Đang thử nghiệm

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -113,3 +113,22 @@ media/
 **/migrations/**
 !**/migrations
 !**/migrations/__init__.py
+
+# 
+datastore/files/*
+!datastore/files/__init__.py
+datastore/images/*
+!datastore/images/__init__.py
+!datastore/images/avatar
+!datastore/images/logo
+datastore/images/avatar/*
+!datastore/images/avatar/__init__.py
+datastore/metadata/*
+!datastore/metadata/__init__.py
+datastore/other/*
+!datastore/other/__init__.py
+datastore/styles/*
+!datastore/styles/__init__.py
+
+# 
+test/
