--- a/backend/docker-compose.backend.yml
+++ b/backend/docker-compose.backend.yml
@@ -7,8 +7,8 @@ services:
     image: mdillon/postgis:latest
     volumes:
       - db_data:/var/lib/postgresql/data
-    ports:
-      - "8001:5432"
+    # ports:
+    #   - "8001:5432"
     env_file:
       - .env
     restart: on-failure
