--- a/backend/requirements_prod.txt
+++ b/backend/requirements_prod.txt
@@ -1,3 +1,4 @@
+djangorestframework-simplejwt
 asgiref==3.4.1
 certifi==2022.6.15
 charset-normalizer==2.0.12
@@ -8,6 +9,7 @@ django-cors-headers==3.10.1
 django-jazzmin==2.5.0
 djangorestframework==3.13.1
 djangorestframework-gis==1.0
+djangorestframework-simplejwt==4.4.0
 drf-yasg==1.21.3
 GDAL==2.3.2
 idna==3.3
@@ -15,16 +17,21 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+numpy==1.19.5
 packaging==21.3
+pandas==1.1.5
 Pillow==8.4.0
 pip==18.0
 psycopg2==2.9.3
+PyJWT==4.4.0
 pyparsing==3.0.7
+python-dateutil==2.8.2
 pytz==2022.2.1
 requests==2.27.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
 setuptools==40.2.0
+six==1.16.0
 sqlparse==0.4.2
 typing-extensions==4.1.1
 uritemplate==4.1.1
